Fixed scrollbar hidden

--- a/Chatbot/bar-animalcrossing-v2.css
+++ b/Chatbot/bar-animalcrossing-v2.css
@@ -30,6 +30,7 @@ body {
     width: 10px; /*高宽分别对应横竖滚动条的尺寸*/
   
     height: 1px;
+    display: none;
   }
   
   body::-webkit-scrollbar-thumb {
